tests/consteval_diag_error_basic.stderr
tests/consteval_diag_error_basic.sl:6:1: SL2075: consteval error: boom
